# solana-program-library

examples/rust/cross-program-invocation/: Cargo.toml  README.md
examples/rust/cross-program-invocation/src/: entrypoint.rs  lib.rs
examples/rust/cross-program-invocation/tests/: functional.rs
examples/rust/custom-heap/: Cargo.toml
examples/rust/custom-heap/src/: entrypoint.rs
token-metadata/example/tests/: initialize.rs
