[package]
name = "spl-example-cross-program-invocation"
version = "1.0.0"
description = "Solana Program Library Cross Program Invocation Example"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = ">=1.18.11,<=2"
static_assertions = "1.1.0"
log = "0.4.20"
linked_list_allocator = { version = "0.10.5", default-features = false }

[dev-dependencies]
solana-program-test = ">=1.18.11,<=2"
solana-sdk = ">=1.18.11,<=2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
